package com.alexchernikov.designpatterns.strategy.core;

public enum StorageType {
    LIFO,
    FIFO
}
